Source/JavaScriptCore/inspector/remote/socket/RemoteInspectorSocket.h
@@ -69,10 +69,10 @@ Optional<PlatformSocketType> listen(const char* address, uint16_t port);
 Optional<PlatformSocketType> accept(PlatformSocketType);
 Optional<std::array<PlatformSocketType, 2>> createPair();
 
-void setup(PlatformSocketType);
+bool setup(PlatformSocketType);
 bool isValid(PlatformSocketType);
 bool isListening(PlatformSocketType);
-uint16_t getPort(PlatformSocketType);
+Optional<uint16_t> getPort(PlatformSocketType);
 
 Optional<size_t> read(PlatformSocketType, void* buffer, int bufferSize);
 Optional<size_t> write(PlatformSocketType, const void* data, int size);
